--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Window 11 </title>
+    <meta property = "og:image" content = "https://www.cnet.com/a/img/e_qNvTqq2pc4L57YwS8FqpO9YEQ=/940x0/2021/06/28/cc888f57-711c-40b9-b874-028a8c20bc87/windows-11-update-on-laptop-cnet-july-2021-pool-table.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
